--- a/platformio.ini
+++ b/platformio.ini
@@ -13,16 +13,16 @@
 ;          Common project settings
 ;***************************************************
 [platformio]
+extra_configs =
+    lcd_config.ini
+    pin_config.ini
+    ; --  Add customizations to this file only:
+    platformio_override.ini
+
 default_envs =
-    ; Comment unneeded environments or create extra
-    esp32dev-mrb3511
-    d1mini-lolintft24
-    d1mini32-lolintft24
-    lolind32pro-lolintft24
-    esp12e-st7735
-    d132-unoshield
-    ;nodemcu32s-raspi
-    ;esp32dev-ili9488
+    ; Uncomment the needed environments in platformio_override.ini
+    ; You can also create new environments in in platformio_override.ini
+    ${override.extra_default_envs}
 
 ; -- Location of the configuration files
 ;include_dir =
@@ -31,9 +31,6 @@ default_envs =
     ;lvgl
     ;png_decoder
 
-; --  Add customizations to this file only
-extra_configs = platformio_override.ini
-
 
 ;***************************************************
 ;          Common environment settings
@@ -41,6 +38,7 @@ extra_configs = platformio_override.ini
 [env]
 framework = arduino
 upload_speed = 921600
+monitor_speed = 115200
 ; -- Shared library dependencies in all environments
 lib_deps =
     ;lvgl@7.0.0          ; Not in library yet 
@@ -88,6 +86,7 @@ esp32_flags=
 ; -- to use it, copy platformio_override.ini from the template
 [override]
 build_flags =
+extra_default_envs =
 
 ;***************************************************
 ;          Hardware options
@@ -102,42 +101,6 @@ hspi32 =
     -D TFT_MISO=12
     -D TFT_MOSI=13
     -D TFT_SCLK=14
-
-; -- Configuration parameters for standard displays
-[lcd]
-tft_rotation = 0      ; default rotation
-tft_width = 240       ; default width
-tft_height = 320      ; default height
-lolin24 =
-    -D ILI9341_DRIVER=1
-    -D TFT_WIDTH=240
-    -D TFT_HEIGHT=320
-    -D TFT_ROTATION=0 ; 0=0, 1=90, 2=180 or 3=270 degree
-    -D SPI_FREQUENCY=40000000
-    -D SPI_TOUCH_FREQUENCY=2500000
-    -D SPI_READ_FREQUENCY=20000000
-    -D USER_SETUP_LOADED=1
-    -D TOUCH_DRIVER=0 ; XPT2606 Resistive touch panel driver
-    -D SUPPORT_TRANSACTIONS
-raspberrypi =
-    -D RPI_DISPLAY_TYPE=1
-    -D ST7796_DRIVER=1
-    -D TFT_WIDTH=320
-    -D TFT_HEIGHT=480
-    -D TFT_ROTATION=0 ; 0=0, 1=90, 2=180 or 3=270 degree
-    -D SPI_FREQUENCY=80000000
-    -D SPI_TOUCH_FREQUENCY=2500000
-    -D USER_SETUP_LOADED=1
-    -D SUPPORT_TRANSACTIONS
-mrb3511 =
-    -D ESP32_PARALLEL=1
-    -D ILI9488_DRIVER=1
-    -D TFT_WIDTH=320
-    -D TFT_HEIGHT=480
-    -D TFT_ROTATION=0 ; 0=0, 1=90, 2=180 or 3=270 degree
-    -D USER_SETUP_LOADED=1
-    -D TOUCH_DRIVER=1 ; GT911 Capacitive touch panel driver
-    -D SUPPORT_TRANSACTIONS
 
 ; Rotation params:
 ; 0 - 0 deg
@@ -156,9 +119,8 @@ mrb3511 =
 [env:esp32dev-mrb3511]
 platform = espressif32
 board = esp32dev
-upload_port = COM3      ; Change to the correct port
-monitor_port = COM3     ; Change to the correct port
-monitor_speed = 115200
+upload_port = COM1      ; To change the port, use platform_override.ini
+monitor_port = COM1     ; To change the port, use platform_override.ini
 debug_tool = esp-prog
 debug_init_break = tbreak setup
 
@@ -201,31 +163,30 @@ src_filter = +<*> +<../drivers/stm32f429_disco>
 [env:esp32dev-ili9488]
 platform = espressif32
 board = esp32dev
-upload_port = COM11      ; Change to the correct port
-monitor_port = COM11     ; Change to the correct port
+upload_port = COM2      ; To change the port, use platform_override.ini
+monitor_port = COM2     ; To change the port, use platform_override.ini
 ; upload_protocol = espota ; Use ArduinoOTA after flashing over serial
 ; upload_port = 10.4.0.171 ; IP of the ESP
 ; upload_flags =
 ;  --port=3232
-monitor_speed = 115200
 debug_tool = esp-prog
 debug_init_break = tbreak setup
 
 build_flags =
     ${flags.esp32_flags}
 ; -- TFT_eSPI build options ------------------------
+    -D USER_SETUP_LOADED=1
     -D ILI9488_DRIVER=1
-    -D TFT_BCKL=5  ;None, configurable via web UI (e.g. 2 for D4)
+    -D TFT_ROTATION=0 ; 0=0, 1=90, 2=180 or 3=270 degree
     -D TFT_WIDTH=320
     -D TFT_HEIGHT=480
-    -D TFT_ROTATION=0 ; 0=0, 1=90, 2=180 or 3=270 degree
-    -D USER_SETUP_LOADED=1
     -D TFT_MISO=19 ;// (leave TFT SDO disconnected if other SPI devices share MISO)
     -D TFT_MOSI=23
     -D TFT_SCLK=18
     -D TFT_CS=15  ;// Chip select control pin
     -D TFT_DC=2  ;// Data Command control pin
     -D TFT_RST=4 ;// Reset pin (could connect to RST pin)
+    -D TFT_BCKL=5  ;None, configurable via web UI (e.g. 2 for D4)
     -D SUPPORT_TRANSACTIONS
     -D TOUCH_CS=22
     -D TOUCH_DRIVER=0 ; XPT2606 Resistive touch panel driver
@@ -249,9 +210,8 @@ src_filter = +<*> +<../drivers/stm32f429_disco>
 [env:nodemcu32s-raspi]
 platform = espressif32
 board = nodemcu-32s
-upload_port = COM3      ; Change to the correct port
-monitor_port = COM3     ; Change to the correct port
-monitor_speed = 115200
+upload_port = COM3      ; To change the port, use platform_override.ini
+monitor_port = COM3     ; To change the port, use platform_override.ini
 debug_tool = esp-prog
 debug_init_break = tbreak setup
 
@@ -279,24 +239,20 @@ lib_deps =
 [env:d132-unoshield]
 platform = espressif32
 board = esp32dev
-upload_protocol = espota ; Use ArduinoOTA after flashing over serial
-upload_port = 10.1.0.137 ; IP of the ESP
-upload_flags =
-monitor_speed = 115200
-monitor_port = COM7
+upload_port = COM4      ; To change the port, use platform_override.ini
+monitor_port = COM4     ; To change the port, use platform_override.ini
 
 build_flags =
     ${flags.esp32_flags}
 ; -- TFT_eSPI build options ------------------------
-    -D TFT_ROTATION=${lcd.TFT_ROTATION}
-    -D TFT_WIDTH=320
-    -D TFT_HEIGHT=480
     -D USER_SETUP_LOADED=1
     ;-D ST7796_DRIVER=1 ;3.95inch Arduino Display-UNO
      -D ILI9486_DRIVER=1 ;3.5inch Arduino Display-UNO
-    ${pins.vspi32}
     -D ESP32_PARALLEL=1
-    -D PSEUDO_8_BIT=1
+    -D TFT_ROTATION=${lcd.TFT_ROTATION}
+    -D TFT_WIDTH=320
+    -D TFT_HEIGHT=480
+    ${pins.vspi32}
     -D TFT_BCKL=-1  ;None, configurable via web UI (e.g. 2 for D4)
     -D TFT_CS=33  ; Chip select control pin
     -D TFT_DC=15  ; Data Command control pin - must use a pin in the range 0-31
@@ -332,9 +288,8 @@ src_filter = +<*> +<../drivers/stm32f429_disco>
 [env:d1mini32-lolintft24]
 platform = espressif32@^1.12.0
 board = wemos_d1_mini32
-upload_port = COM6       ; Change to the correct port
-monitor_port = COM6      ; Change to the correct port
-monitor_speed = 115200
+upload_port = COM5      ; To change the port, use platform_override.ini
+monitor_port = COM5     ; To change the port, use platform_override.ini
 board_build.partitions = default.csv
 build_flags =
     ${flags.esp32_flags}
@@ -355,9 +310,8 @@ build_flags =
 [env:lolind32pro-lolintft24]
 platform = espressif32
 board = lolin_d32_pro
-upload_port = COM14      ; Change to the correct port
-monitor_port = COM14     ; Change to the correct port
-monitor_speed = 115200
+upload_port = COM6      ; To change the port, use platform_override.ini
+monitor_port = COM6     ; To change the port, use platform_override.ini
 board_build.partitions = default.csv
 build_flags =
     ${flags.esp32_flags}
@@ -377,13 +331,8 @@ build_flags =
 [env:d1mini-lolintft24]
 platform = espressif8266@^2.4.0 ;@2.3.2
 board = d1_mini
-upload_port = COM13       ; Change to the correct port
-;upload_protocol = espota ; Use ArduinoOTA after flashing over serial
-;upload_port = 10.1.0.148 ; IP of the ESP
-;upload_flags =
-;  --port=3232
-monitor_port = COM13      ; Change to the correct port
-monitor_speed = 115200
+upload_port = COM7      ; To change the port, use platform_override.ini
+monitor_port = COM7     ; To change the port, use platform_override.ini
 board_build.f_flash = 40000000L
 board_build.flash_mode = dout
 board_build.ldscript = eagle.flash.4m2m.ld  ; 2Mb Spiffs
@@ -408,9 +357,8 @@ build_flags =
 [env:esp12e-st7735]
 platform = espressif8266@^2.4.0 ;@2.3.2
 board = esp12e
-upload_port = COM13     ; Change to the correct port
-monitor_port = COM13    ; Change to the correct port
-monitor_speed = 115200
+upload_port = COM8      ; To change the port, use platform_override.ini
+monitor_port = COM8     ; To change the port, use platform_override.ini
 board_build.f_flash = 40000000L
 board_build.flash_mode = dout
 board_build.ldscript = eagle.flash.4m2m.ld  ; 2Mb Spiffs
@@ -418,12 +366,12 @@ board_build.f_cpu = 160000000L ; set frequency to 160MHz
 build_flags =
     ${flags.esp8266_flags}
 ; -- TFT_eSPI build options ------------------------
-    -D TFT_ROTATION=${lcd.TFT_ROTATION}
-    -D TFT_WIDTH=128
-    -D TFT_HEIGHT=160
     -D USER_SETUP_LOADED=1
     -D ST7735_DRIVER=1
     -D ST7735_BLACKTAB=1
+    -D TFT_ROTATION=${lcd.TFT_ROTATION}
+    -D TFT_WIDTH=128
+    -D TFT_HEIGHT=160
     -D TFT_MISO=-1 ;NC
     -D TFT_MOSI=13 ;D7
     -D TFT_SCLK=14 ;D5
@@ -437,7 +385,7 @@ build_flags =
 ; -- Library options -------------------------------
 lib_deps =
     ${env.lib_deps}
-    Ethernet@<2.0.0
+    ;Ethernet@<2.0.0
 
 ;***************************************************
 ;          STM32F4 build
@@ -446,18 +394,17 @@ lib_deps =
 platform = ststm32
 board = diymore_f407vgt
 board_build.mcu = stm32f407vgt6
-framework = arduino
 upload_protocol = dfu
 build_flags =
     ${env.build_flags}
     ${flags.stm32_flags}
 ; -- TFT_eSPI build options ------------------------
-    -D TFT_ROTATION=${lcd.TFT_ROTATION}
-    -D TFT_WIDTH=${lcd.TFT_WIDTH}
-    -D TFT_HEIGHT=${lcd.TFT_HEIGHT}
     -D USER_SETUP_LOADED=1
     -D ST7735_DRIVER=1
     -D ST7735_BLACKTAB=1
+    -D TFT_ROTATION=${lcd.TFT_ROTATION}
+    -D TFT_WIDTH=${lcd.TFT_WIDTH}
+    -D TFT_HEIGHT=${lcd.TFT_HEIGHT}
     -D TFT_MISO=-1 ;NC
     -D TFT_MOSI=13 ;D7
     -D TFT_SCLK=14 ;D5
