--- a/platformio.ini
+++ b/platformio.ini
@@ -204,3 +204,45 @@ hspi32 =
 ;  ;lv_drivers=https://github.com/littlevgl/lv_drivers/archive/master.zip
 ;  lv_drivers@^6.0.2
 ;src_filter = +<*> +<../drivers/sdl2>
+
+;***************************************************;
+;          D1 Mini ESP32 with Lolin TFT 2.4"        ;
+;               - D1-mini-esp32 board               ;
+;               - ili9341 TFT                       ;
+;               - xpt2046 touch controller          ;
+;***************************************************;
+
+[env:d1-mini-esp32_ili9341]
+platform = espressif32
+platform_packages = framework-arduinoespressif32
+framework = arduino
+board = wemos_d1_mini32
+;upload_port = COM5      ; To change the port, use platform_override.ini
+;monitor_port = COM5     ; To change the port, use platform_override.ini
+monitor_filters = esp32_exception_decoder
+board_build.partitions = user_setups/esp32_partition_app1300k_spiffs1216k.csv
+
+build_flags =
+    ${env.build_flags}
+    ${esp32.build_flags}
+
+;region -- TFT_eSPI build options ------------------------
+    ${lcd.lolin24}
+    ${pins.vspi32}
+    -D TFT_DC=5
+    -D TFT_CS=26 
+    -D TFT_RST=-1  ; RST
+    -D TFT_BCKL=-1 ; None, configurable via web UI (e.g. 21)
+    -D TOUCH_CS=17 ; (can also be 22 or 16)
+;endregion
+
+;region -- Library options -------------------------------
+lib_deps =
+    ${env.lib_deps}
+    ${esp32.lib_deps}
+
+lib_ignore =
+    ${env.lib_ignore}
+    ${esp32.lib_ignore}
+;endregion
+    
