--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -102,34 +102,13 @@ jobs:
         with:
           name: ${{ matrix.environment.out }}
           path: build_output/firmware/*.*n
-      - name: Create release and upload firmware
+      - name: On Release, upload assets to that Release
         uses: AButler/upload-release-assets@v3.0
         with:
           files: "build_output/firmware/*.bin"
           repo-token: ${{ secrets.GITHUB_TOKEN }}
-      # - name: Create release and upload firmware
-      #   if: github.ref != 'refs/heads/master'
-      #   run: |
-      #     set -x
-      #     assets=()
-      #     for asset in build_output/firmware/*.bin; do
-      #       assets+=("-a" "$asset")
-      #     done
-      #     tag_name="${GITHUB_REF##*/}"
-      #     hub release edit "${assets[@]}" -m "$tag_name" "$tag_name"
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    #- name: Create release and upload firmware
-    #  run: |
-    #    set -x
-    #    assets=()
-    #    for asset in build_output/firmware/*.bin; do
-    #      assets+=("-a" "$asset")
-    #    done
-    #    tag_name="${GITHUB_REF##*/}"
-    #    hub release create "${assets[@]}" -m "$tag_name" "$tag_name"
-    #  env:
-    #    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+          
   linux_build:
     runs-on: ubuntu-latest
     steps:
