--- a/user_setups/esp32s3/lilygo-t-panel.ini
+++ b/user_setups/esp32s3/lilygo-t-panel.ini
@@ -2,7 +2,7 @@
 ;        Lilygo T-Panel S3, 4-Inch Touch Screen     ; 
 ;               - Custom esp32-s3 board             ;
 ;               - st7701s TFT                       ;
-;               - CST3240 touch controller          ;
+;               - CST3240 touch controller (WIP)    ;
 ;               - IO Expansion: XL9535              ;
 ;***************************************************;
 
@@ -48,18 +48,6 @@ build_flags =
     -D TFT_R4=45
     -D TFT_BCKL=14
 
-
-    -D TFT_HSYNC_POLARITY=1
-    -D TFT_HSYNC_FRONT_PORCH=10
-    -D TFT_HSYNC_PULSE_WIDTH=8
-    -D TFT_HSYNC_BACK_PORCH=50
-    -D TFT_VSYNC_POLARITY=1
-    -D TFT_VSYNC_FRONT_PORCH=10
-    -D TFT_VSYNC_PULSE_WIDTH=8
-    -D TFT_VSYNC_BACK_PORCH=20
-    -D TFT_PCLK_ACTIVE_NEG=1
-    -D TFT_PREFER_SPEED=12000000
-    -D TFT_AUTO_FLUSH=1
     ; Touch Settings
     -D TOUCH_WIDTH=480
     -D TOUCH_HEIGHT=480
@@ -69,10 +57,10 @@ build_flags =
     -D TOUCH_RST=4
     -D TOUCH_CS=-1
     -D TOUCH_DRIVER=0x3240
-    ; -D TOUCH_IRQ=-1
-    ; -D I2C_TOUCH_FREQUENCY=400000
-    ; -D I2C_TOUCH_ADDRESS=0x48
-    ; -D I2C_TOUCH_PORT=1
+    ; -D TOUCH_IRQ=
+    ; -D I2C_TOUCH_FREQUENCY=
+    ; -D I2C_TOUCH_ADDRESS=
+    ; -D I2C_TOUCH_PORT=
 
 ;endregion
 
