--- a/user_setups/esp32/huzzah32-v2-featherwing-35-v2.ini
+++ b/user_setups/esp32/huzzah32-v2-featherwing-35-v2.ini
@@ -6,8 +6,8 @@
 ;***************************************************;
 
 [env:huzzah32-v2-featherwing-35-v2]
-extends = arduino_esp32_v2, flash_4mb
-board = featheresp32
+extends = arduino_esp32_v2, flash_8mb
+board = adafruit_feather_esp32_v2
 
 build_flags =
     -D HASP_MODEL="Adafruit HUZZAH32 V2 ESP32 Featherwing 3.5 V2"
@@ -16,13 +16,14 @@ build_flags =
     -D LV_INDEV_DEF_READ_PERIOD=30
 ;region -- TFT_eSPI build options ------------------------
     ${lcd.featherwing-35-v2}
-    -D TFT_MISO=19
-    -D TFT_MOSI=18
-    -D TFT_SCLK=5
-    -D TFT_DC=10
-    -D TFT_CS=9
+    -D TFT_MISO=21 ; GPIO21 / MISO
+    -D TFT_MOSI=19 ; GPIO19 / MOSI
+    -D TFT_SCLK=5 ; GPIO5 / SCK
+    -D TFT_DC=33 ; GPIO33 / D33
+    -D TFT_CS=15 ; GPIO15 / D15
     -D TFT_RST=-1  ; RST
-    -D TFT_BCKL=21 ; Solder the LITE pad to a PWM enabled pin of the ESP, like GPIO 21
+
+    -D TFT_BCKL=37 ; Solder the LITE pad to a PWM enabled pin of the ESP, like GPIO 21
 ;endregion
 
 lib_deps =
